# PEG-GSTORE1.0

./: .gitignore  CMakeLists.txt  L1_0.txt  PEG_AddEdge.cpp  PEG_AllEntity.cpp  PEG_ClosenessCentrality.cpp  PEG_Delete.cpp  PEG_Khop.cpp  PEG_Load.cpp  PEG_Neighbor.cpp  PEG_Query.cpp  PEG_RemoveEdge.cpp  PEG_SSPPR.cpp  PEG_Server.cpp  PEG_ShortestPath.cpp  PEG_Triangle.cpp  PEG_Triangle1.cpp  PEG_Triangle2.cpp  PEG_Version.cpp  README.md  README_EN.md  testjson.cpp  txt
conf/: dblist.json  servers.json
data/: triangle.q
data/lubm/: PEG_divide  mpc3
data/lubm/query/: E1.txt  LUBM_Q2.txt  LUBM_Q3.txt  LUBM_Q6.txt  LUBM_Q7.txt  N1.txt  N3.txt  Q1.txt  Q2.txt  Q3.txt  sub1.txt  sub2.txt  sub3.txt  tri1.txt
data/watdiv/: watdiv100K-3.txt
gStoreAPI/: client.cpp
handler/: Handler.h
joiner/: joiner.cpp  joiner.h
lubm100m/: queryfile
queryDecompose/Parser/: SparqlLexer.h
queryDecompose/Query/: GeneralEvaluation.cpp  QueryTree.cpp
queryDecompose/tools/: .gitignore
script/: build.sh  setup.sh  start_server.sh  stop_server.sh
static/: index.html
static-hst/: index.html
static-hst/static/css/: chunk-7d6b91ac.eedc4859.css
static-hst/static/js/: chunk-2d2165c4.3a71aa90.js
static/static/css/: chunk-605f45f7.b74c8bff.css  chunk-a91ca4ea.3b419529.css
static/static/js/: app.305159bb.js  app.818ce301.js  app.fa720eab.js  chunk-5363a573.26d1d65d.js  chunk-5363a573.3d3b7696.js  chunk-605f45f7.e4d77496.js  chunk-7d6b91ac.2513643a.js  chunk-a91ca4ea.8946df6c.js
static/zh/: index.html
static/zh/static/css/: chunk-2ef99ede.b4cdb9f5.css  chunk-e9c97e96.8864632e.css  chunk-f83ceb7c.ceb6caf3.css
static/zh/static/js/: app.109983fa.js  chunk-0e441d65.ca5e0dc2.js  chunk-181fab9f.ff735105.js  chunk-2ef99ede.364237ec.js  chunk-42495b4e.b7ac4035.js  chunk-e9c97e96.a380080a.js  chunk-f83ceb7c.bbde21cc.js  chunk-libs.9599829d.js
util/: FileTransfer.h  RemoteCmdInvoker.h  RemoteInfo.h  util.h
